--- a/styles/chatContainer.module.css
+++ b/styles/chatContainer.module.css
@@ -11,8 +11,12 @@
   border: 1px solid var(--p-color8);
 }
 
-.chatContainer h3 {
-  margin-bottom: 5px;
+.chatContainerHead {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 10px;
+
 }
 
 .noConversations {
